[package]
name = "thor-discord"
version = "0.1.0"
authors = ["dnery"]
edition = "2018"

[dependencies]
serenity = "0.9.0-rc.2"
tokio = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
kankyo = "0.3"
env_logger = "0.7"
rand = "0.7"
toml = "0.5"
serde_json = "1.0"
reqwest = "0.10"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }
