[package]
name = "thor-discord"
version = "1.0.0"
authors = ["Daniel Nery <danielnso97@gmail.com>"]
edition = "2018"
default-run = "thor-discord"

[dependencies]
serenity = { version = "0.10.9",  default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "cache"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
kankyo = "0.3"
env_logger = "0.8"
rand = "0.8"
toml = "0.5"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.5", default-features = false, features = [ "runtime-tokio-rustls", "macros", "sqlite", "migrate" ] }
csv = "1.1"
phf = { version = "0.10", features = ["macros"] }
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
